# cpp_calculator_test

./: CMakeLists.txt  main.cpp  readme.md
include/: addition.h  division.h  multiplication.h  stringmanipulator.h  subtraction.h
script/: build.py  build.sh
src/: CMakeLists.old  CMakeLists.txt  addition.cpp  division.cpp  factorial.cpp  multiplication.cpp  stringmanipulator.cpp  subtraction.cpp
tests/: CMakeLists.txt  factorialTest.cpp
